# social-worker-exam

./: .clippy.toml  .gitignore  Cargo.toml  DB_RESTRUCTURING_REPORT.md  Dockerfile  HANDOVER_REPORT.md  Makefile
.agent/: rules.md
.agent/workflows/: deploy-web-mental.md  deploy-web-social.md  update-mock-data.md
social-welfare-app/: SPECIFICATIONS.md  package-lock.json  package.json  social_welfare.sqbpro
social-welfare-app/src/: App.tsx
social-welfare-app/src-tauri/: .gitignore  Cargo.toml  build_error.txt  build_error_utf8.txt  build_log.txt  error.txt  social_welfare.db  social_welfare.sqbpro  tauri.conf.json
src/: domain.rs  lib.rs  main.rs  prelude.rs
temp-fix-app/: app.json  package-lock.json  package.json
welfare-master/: GOLDEN_RULES.md  HANDOVER_REPORT.md  MASTER_FLOW_GUIDE.md  SPECIFICATIONS.md  VIBE_CODING_GOLDEN_RULES.md  candidates.json  check_counts_v5.txt  check_groups.py  check_master.py  check_web_count.js  clear_broken_explanations.js  debug_r6.txt  debug_site_order.py  dump_sssc.py  fix_correct_answer.js  fix_web_scroll.js  groups_log.txt  inspect_id_patterns.js  inspect_intruder.js  inspect_r6_order.js  inspect_result.json  inspect_web_asset.js  inspect_year_data.js  log_verify.txt  merge_all_explanations.js  merge_explanations.js  output.txt  output_html.txt  remaining_report.txt  reorganize_database.js  sanitize_explanations.js  scan_masters.py  scan_masters_v2.py  sync_web_assets.js  test_script.py  verify_count.py  verify_separation.js  verify_separation_strict.js
welfare-master/app/: app.config.ts  app.json  babel.config.js  (+7 more)
(+240 files in other folders)
